--- a/index.html
+++ b/index.html
@@ -16,31 +16,118 @@
 
   <link rel="stylesheet" href="/lib/highlight/styles/github.css">
   <script src="/lib/highlight/highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+  <script>
+  hljs.initHighlightingOnLoad();
+  </script>
 
 </head>
 
 <body>
 
- <div class="container">
+  <div class="container">
 
     <h1>Exemplos de uso do mapa</h1>
 
-    <div class="map-block">
-      <div id="example-1" class="viz"></div> 
+    <div class="map-block clearfix">
+      <div id="example-1" class="viz"></div>
       <div class="code">
+        <pre>
+          <code class="javascript">
+d3.tsv('data/pop.tsv', function(error, data) {
+  if (error) {
+    console.log(error);
+  } else {
+    var one = d3map.viz()
+      .container('#example-1')
+      .data(data)
+      .id('UF')
+      .map({
+        'topojson': '/resources/br-states.min.json',
+        'unit': 'states',
+        'key': 'name'
+      })
+      .color({
+        'key': '1920',
+        'range': colorbrewer.YlGn[9]
+      })
+      .width(400)
+      .height(400)
+      .draw();
+  }
+});
+          </code>
+        </pre>
       </div>
     </div>
 
-    <div class="map-block">
-      <div id="example-2" class="viz"></div> 
+    <div class="map-block clearfix">
+      <div id="example-2" class="viz"></div>
       <div class="code">
+        <pre>
+          <code class="javascript">
+d3.json('data/br-2.json', function(error, data) {
+  if (error) {
+    console.log(error);
+  } else {
+    var two = d3map.viz()
+      .container('#example-2')
+      .data(data)
+      .id('id')
+      .map({
+        'topojson': '/resources/br-states.min.json',
+        'unit': 'states',
+        'key': 'name'
+      })
+      .color({
+        'key': 'value',
+        'range': ['#FEC44F', '#40004B'],
+        'interpolate': true
+      })
+      .width(400)
+      .height(400)
+      .onclick(function(d) {
+        console.log(d.properties.name);
+      })
+      .draw();
+  }
+});
+          </code>
+        </pre>
       </div>
     </div>
 
-    <div class="map-block">
-      <div id="example-3" class="viz"></div> 
+    <div class="map-block clearfix">
+      <div id="example-3" class="viz"></div>
       <div class="code">
+        <pre>
+          <code class="javascript">
+d3.json('data/br.json', function(error, data) {
+  if (error) {
+    console.log(error);
+  } else {
+    var three = d3map.viz()
+      .container('#example-3')
+      .data(data)
+      .id('id')
+      .map({
+        'topojson': '/resources/br-states.min.json',
+        'unit': 'states',
+        'key': 'name'
+      })
+      .color({
+        'key': function(d) {
+          return d.a - d.b;
+        },
+        'domain': [-1, 0, 1],
+        'range': ['#4575B4', '#FFFFFF', '#D53E4F']
+      })
+      .width(400)
+      .height(400)
+      .draw();
+  }
+});       
+          </code>
+        </pre>
       </div>
     </div>
 
@@ -52,8 +139,7 @@
   <script src="/d3map.min.js"></script>
 
   <script>
-
-  d3.tsv('data/populacao_nos_centros_demograficos.tsv', function(error, data) {
+  d3.tsv('data/pop.tsv', function(error, data) {
     if (error) {
       console.log(error);
     } else {
@@ -67,48 +153,50 @@
           'key': 'name'
         })
         .color({
-          'key': '2010',
-          'range': colorbrewer.YlGnBu[9]
+          'key': '1920',
+          'range': colorbrewer.YlGn[9]
         })
-        .width(500)
-        .height(500)
+        .width(400)
+        .height(400)
         .draw();
     }
-
   });
 
-  d3.tsv('data/br.json', function(error, data) {
+  d3.json('data/br-2.json', function(error, data) {
     if (error) {
       console.log(error);
     } else {
       var two = d3map.viz()
         .container('#example-2')
         .data(data)
-        .id('UF')
+        .id('id')
         .map({
           'topojson': '/resources/br-states.min.json',
           'unit': 'states',
           'key': 'name'
         })
         .color({
-          'key': 'a',
-          'range': ['#2166AC', '#40004B']
+          'key': 'value',
+          'range': ['#FEC44F', '#40004B'],
+          'interpolate': true
         })
-        .width(500)
-        .height(500)
+        .width(400)
+        .height(400)
+        .onclick(function(d) {
+          console.log(d.properties.name);
+        })
         .draw();
     }
-
   });
 
-  d3.tsv('data/br.json', function(error, data) {
+  d3.json('data/br.json', function(error, data) {
     if (error) {
       console.log(error);
     } else {
       var three = d3map.viz()
         .container('#example-3')
         .data(data)
-        .id('UF')
+        .id('id')
         .map({
           'topojson': '/resources/br-states.min.json',
           'unit': 'states',
@@ -118,15 +206,14 @@
           'key': function(d) {
             return d.a - d.b;
           },
-          'range': colorbrewer.Spectral[5]
+          'domain': [-1, 0, 1],
+          'range': ['#4575B4', '#FFFFFF', '#D53E4F']
         })
-        .width(500)
-        .height(500)
+        .width(400)
+        .height(400)
         .draw();
     }
-
   });
-
   </script>
 
 </body>
